still structuring, need to take a break

--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <ul class="header-list">
-            <li>Home</li>
+            <li><a class="list" href="../in">Home</a></li>
             <li><a class="list" href="aboutme/aboutme.html">About Me</a></li>
             <li><a class="list" href=resume/resume.html>Resume</a></li>
             <li><a class="list" href=projects/projects.html>Projects</a></li>
@@ -19,10 +19,12 @@
     </header>
 
     <div class="main-body">
-        <div class="main"><img src="https://i.redd.it/yttdwn3y0z181.jpg"></div>
-        <p class="bio">
-            Seth Stone
-        </p>
+        <div class="main"><img src="https://i.redd.it/yttdwn3y0z181.jpg">
+            <div class="bio">Seth Stone</div>
+            <p class="aboutme">
+                A beginner out to start a new career path.
+            </p>
+        </div>
     </div>
     
 </body>
